tests/golden/cases/undefined_name_ascii.txt
tests/golden/cases/undefined_name_ascii.suay:1:7: runtime error: Undefined name 'z'
say . z
      ^
